Update with corrected CA banner and fonts and spacing

--- a/src/CulturalAdvice/css/culturaladviceV2.css
+++ b/src/CulturalAdvice/css/culturaladviceV2.css
@@ -1,21 +1,40 @@
 .culturaladvicev2 {
-    padding-top: 20px;
-    background-image: linear-gradient(90deg, #49206cd5 48.12%, #48206c00 70.31%), url(https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png);
+    background: linear-gradient(90deg, #41215E 35.5%, rgba(65, 33, 94, 0.00) 100%), url(https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png) lightgray 50% / cover no-repeat;
+    /* background-image: linear-gradient(90deg, #49206cd5 48.12%, #48206c00 70.31%), url(https://static.uq.net.au/v15/images/rap/brisbane-river-artwork.png); */
 }
 
 .culturaladvicev2 p {
-    padding-bottom: 20px;
-    letter-spacing: .01rem;
-    font-weight: 400;
+    /* padding-bottom: 12px;
+    padding-top: 12px;
+    letter-spacing: 0.16px;
+    font-weight: '400';
     font-family: Roboto, Helvetica, Arial, sans-serif; 
     color: white; 
     margin: 0;
-    border: 0
+    border: 0 */
+    color: var(--Brand-white, #FFF);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 199%; /* 31.84px */
+    letter-spacing: 0.16px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+
 }
 
 .culturaladvicev2 a {
     color: white;
-    text-decoration: underline;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 199%;
+    letter-spacing: 0.16px;
+    text-decoration-line: underline;
 }
 .layout-card {
     margin-left: auto;
@@ -23,14 +42,4 @@
     max-width: 71rem;
     padding-left: 1rem;
     padding-right: 1rem;
-   
-}
-
-@media (max-width: 640px) {
-    .layout-card {
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 24px;
-        padding-right: 24px;
-    }
 }
